Fixes & stats